force-app/main/default/objects/ApprovalProcessStepDefinition__c/ApprovalProcessStepDefinition__c.object-meta.xml
<CustomObject>
    <label>ApprovalProcessStepDefinition</label>
    <nameField>
        <label>ApprovalProcessStepDefinition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApprovalProcessStepDefinitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>