force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/AllowDelegate__c.field-meta.xml
<CustomField>
    <fullName>AllowDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowDelegate</label>
    <type>Checkbox</type>
</CustomField>