force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/ApprovalFlow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ApprovalFlow_API_Name__c</fullName>
    <label>ApprovalFlow API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>