force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/ApprovalProcessDefinition__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessDefinition__c</fullName>
    <label>ApprovalProcessDefinition</label>
    <referenceTo>ApprovalProcessDefinition__c</referenceTo>
    <relationshipLabel>Approval Process Step Definitions</relationshipLabel>
    <relationshipName>ApprovalProcessStepDefinitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>