force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/ApproverType__c.field-meta.xml
<CustomField>
    <fullName>ApproverType__c</fullName>
    <label>ApproverType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>adhoc</fullName>
                <label>User Selects</label>
            </value>
            <value>
                <fullName>multiple</fullName>
                <label>Multiple Approvers</label>
            </value>
            <value>
                <fullName>hierarchy-based</fullName>
                <label>Based on a Hierarchy Role</label>
            </value>
            <value>
                <fullName>queue</fullName>
                <label>Queue Members Approve</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>