force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/DecisionCriteria__c.field-meta.xml
<CustomField>
    <fullName>DecisionCriteria__c</fullName>
    <description>Only applies when the ApproverType is Multiple and there are more than one approvers selected.</description>
    <label>DecisionCriteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OneApprovalNeeded</fullName>
            </value>
            <value>
                <fullName>MajorityNeeded</fullName>
            </value>
            <value>
                <fullName>UnanimousNeeded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>