force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/EntryCriteria__c.field-meta.xml
<CustomField>
    <fullName>EntryCriteria__c</fullName>
    <label>EntryCriteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>