force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/ifCriteriaNotMet__c.field-meta.xml
<CustomField>
    <fullName>ifCriteriaNotMet__c</fullName>
    <description>Specifies what to do for records that don’t meet the entry criteria. Valid values are:
ApproveRecord—Approve the request and execute all final approval actions.
RejectRecord—Reject the request and execute all final rejection actions. This option is available only for the first step in the approval process.
GotoNextStep—Skip to the next approval step. If you select this option for the first approval step, and a record doesn’t meet the entry criteria for any other step, the record is rejected.</description>
    <label>ifCriteriaNotMet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ApproveRecord</fullName>
            </value>
            <value>
                <fullName>RejectRecord</fullName>
            </value>
            <value>
                <fullName>GotoNextStep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>