force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/RejectBehavior__c.field-meta.xml
<CustomField>
    <fullName>RejectBehavior__c</fullName>
    <label>RejectBehavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FinalRejection</fullName>
                <label>Perform all rejection actions for this step AND all final rejection actions. (Final Rejection)</label>
            </value>
            <value>
                <fullName>BackOneStep</fullName>
                <label>Perform ONLY the rejection actions for this step and send the approval request back to the most recent approver.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>