force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/RejectionFlow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>RejectionFlow_API_Name__c</fullName>
    <label>RejectionFlow API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>