force-app/main/default/objects/ApprovalProcessStepDefinition__c/fields/SingleApproverOrMultiple__c.field-meta.xml
<CustomField>
    <fullName>SingleApproverOrMultiple__c</fullName>
    <description>Some choices result in a single approver, but there&#39;s also a way to create a list of possible approvers. This is recorded here because the flow processing is different depending on whether the flow has to deal with a list or a singleton</description>
    <label>SingleApproverOrMultiple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>